Chapter_03_More_Building_Blocks/2.01/pingpong/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: bachthyaglx/pingpong:latest
          ports:
            - containerPort: 3000
